WIP refactored authentication into separate bundle & implemented OAuth2-based authentication

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,5 @@ services:
             - { name: 'doctrine.event_subscriber' }
 
     Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
+    
+    MLukman\MultiAuthBundle\MultiAuthAdapterInterface: '@App\Service\MultiAuthAdapter'
