--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,8 +20,11 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\LoginFormAuthenticator
-                entry_point: App\Security\LoginFormAuthenticator
+                    - MLukman\MultiAuthBundle\Authenticator\FormGuardAuthenticator
+                    - MLukman\MultiAuthBundle\Authenticator\OAuth2GuardAuthenticator
+                entry_point: MLukman\MultiAuthBundle\Authenticator\EntryPoint
+#                    - App\Security\LoginFormAuthenticator
+#                entry_point: App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
