--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -5,3 +5,8 @@ controllers:
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
+
+multi_auth:
+    resource: "@MultiAuthBundle/Controller/"
+    type: annotation
+    
