--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/(login|register), roles: IS_AUTHENTICATED_ANONYMOUSLY }        
-        - { path: ^/[^/]+/plugins/[^/]+/[^/]+, roles: IS_AUTHENTICATED_ANONYMOUSLY }        
+        - { path: ^/(_login|_register), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/[^/]+/plugins/[^/]+/[^/]+, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER }
