--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        App\Entity\User:
+        App\Entity\UserAuthentication:
             algorithm: bcrypt
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
@@ -8,7 +8,7 @@ security:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\User
+                class: App\Entity\UserAuthentication
                 property: username
     firewalls:
         dev:
@@ -20,8 +20,9 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\LoginFormAuthenticator
-                entry_point: App\Security\LoginFormAuthenticator
+                    - App\Security\Authentication\FormGuardAuthenticator
+                    - App\Security\Authentication\OAuth2GuardAuthenticator
+                entry_point: App\Security\Authentication\EntryPoint
             logout:
                 path: app_logout
                 # where to redirect after logout
