--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/(_login|_register), roles: PUBLIC_ACCESS }
+        - { path: ^/(.login|.register|.oauth2), roles: PUBLIC_ACCESS }
         - { path: ^/[^/]+/plugins/[^/]+/[^/]+, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: ROLE_USER }
