--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,10 +1,13 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-        charset: utf8
+        charset: utf8mb4
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '5.7'
+        types:
+            uuid: Ramsey\Uuid\Doctrine\UuidType
+            json_array: App\Misc\JsonArrayType
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
