--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,14 +63,9 @@
     - echo "{\"auths\":{\"$DOCKER_REGISTRY_URL\":{\"username\":\"$DOCKER_REGISTRY_USR\",\"password\":\"$DOCKER_REGISTRY_PWD\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $DOCKER_IMAGE_URL:$DOCKER_IMAGE_TAG --push-retry=2 --skip-tls-verify=true --skip-tls-verify-pull=true --skip-tls-verify-registry=true $DOCKER_BUILD_ARGS
 
-dockerhub_build:
+gitlabregistry_build:
   extends:
     - .docker_build
-  variables:
-    DOCKER_IMAGE_URL: $DOCKERHUB_REPO
-    DOCKER_REGISTRY_URL: https://index.docker.io/v1/
-    DOCKER_REGISTRY_USR: $DOCKERHUB_USERNAME
-    DOCKER_REGISTRY_PWD: $DOCKERHUB_PASSWORD
   rules:
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
       variables:
@@ -78,3 +73,12 @@ dockerhub_build:
     - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+/'
       variables:
         DOCKER_IMAGE_TAG: $CI_COMMIT_TAG
+
+dockerhub_build:
+  extends:
+    - gitlabregistry_build
+  variables:
+    DOCKER_IMAGE_URL: $DOCKERHUB_REPO
+    DOCKER_REGISTRY_URL: https://index.docker.io/v1/
+    DOCKER_REGISTRY_USR: $DOCKERHUB_USERNAME
+    DOCKER_REGISTRY_PWD: $DOCKERHUB_PASSWORD
