Activity parameters can be copied to clipboard via the attached 'copy' buttons

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,7 @@ services:
             - { name: 'doctrine.event_subscriber' }
 
     Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
+
+    Twig\Extension\StringLoaderExtension:
+        tags:
+            - { name: 'twig.extension' }
