--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^7.0",
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.8",
-        "sensio/framework-extra-bundle": "^5.6",
+        "sensio/framework-extra-bundle": "^5.0|^6.0",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
@@ -46,14 +46,14 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "symfony/browser-kit": "^5.3.",
-        "symfony/css-selector": "^5.3.",
-        "symfony/debug-bundle": "^5.3.",
+        "symfony/browser-kit": "^5.4.",
+        "symfony/css-selector": "^5.4.",
+        "symfony/debug-bundle": "^5.4.",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^5.3.",
-        "symfony/stopwatch": "^5.3.",
-        "symfony/var-dumper": "^5.3.",
-        "symfony/web-profiler-bundle": "^5.3."
+        "symfony/phpunit-bridge": "^5.4.",
+        "symfony/stopwatch": "^5.4.",
+        "symfony/var-dumper": "^5.4.",
+        "symfony/web-profiler-bundle": "^5.4."
     },
     "config": {
         "optimize-autoloader": true,
