--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,23 @@
-.docker_build:
+stages:
+  - build
+  - push
+  
+.run_conditions:
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+/'
+      variables:
+        DOCKER_IMAGE_TAG: $CI_COMMIT_TAG
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+      variables:
+        DOCKER_IMAGE_TAG: "latest"
+    - if: $CI_COMMIT_BRANCH
+      variables:
+        DOCKER_IMAGE_TAG: $CI_COMMIT_REF_SLUG
+
+build_for_gitlabregistry:
   stage: build
+  extends:
+    - .run_conditions
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
@@ -63,22 +81,21 @@
     - echo "{\"auths\":{\"$DOCKER_REGISTRY_URL\":{\"username\":\"$DOCKER_REGISTRY_USR\",\"password\":\"$DOCKER_REGISTRY_PWD\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $DOCKER_IMAGE_URL:$DOCKER_IMAGE_TAG --push-retry=2 --skip-tls-verify=true --skip-tls-verify-pull=true --skip-tls-verify-registry=true $DOCKER_BUILD_ARGS
 
-gitlabregistry_build:
+push_to_dockerhub:
+  stage: push
   extends:
-    - .docker_build
-  rules:
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
-      variables:
-        DOCKER_IMAGE_TAG: "latest"
-    - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+/'
-      variables:
-        DOCKER_IMAGE_TAG: $CI_COMMIT_TAG
-
-dockerhub_build:
-  extends:
-    - gitlabregistry_build
+    - .run_conditions
+  needs:
+    - build_for_gitlabregistry
+  image:
+    name: gcr.io/go-containerregistry/crane:debug
+    entrypoint: [""]
   variables:
-    DOCKER_IMAGE_URL: $DOCKERHUB_REPO
-    DOCKER_REGISTRY_URL: https://index.docker.io/v1/
-    DOCKER_REGISTRY_USR: $DOCKERHUB_USERNAME
-    DOCKER_REGISTRY_PWD: $DOCKERHUB_PASSWORD
+    REGISTRY_URL: index.docker.io
+    REGISTRY_REPO: $DOCKERHUB_REPO
+    REGISTRY_USER: $DOCKERHUB_USERNAME
+    REGISTRY_PASSWORD: $DOCKERHUB_PASSWORD
+  script:
+    - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - crane auth login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY_URL
+    - crane copy ${CI_REGISTRY_IMAGE}:${DOCKER_IMAGE_TAG} ${REGISTRY_REPO}:${DOCKER_IMAGE_TAG} --insecure --platform linux/amd64
