--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
+        "symfony/error-handler": "5.4.*",
         "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.4.*",
